# smartbell

./: .gitignore  CMakeLists.txt  Config.cfg  Makefile  Sch  SetupMosquitto.sh  SetupOpenCV.sh  SetupRapidJSON.sh  Setuplibcurl.sh  clean.cmd  config.cfg  main.cpp  main.h  run.sh  testsmartbell.sh
Logging/: CMakeLists.txt  LogHandler.cpp  LogHandler.h  Logging.cpp  Logging.h  test_log.cpp
Serialize/: BellData.cpp  BellData.h  CMakeLists.txt  CameraData.cpp  CameraData.h  Config.cpp  Config.h  Makefile  SmartBellConfig.cpp  SmartBellConfig.h  SmartBellData.cpp  SmartBellData.h
Units/: CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  ClientAPI.cpp  ClientAPI.h  CommunicateControl.cpp  CommunicateControl.h  MQTTConnector.cpp  MQTTConnector.h
Utilities/: CMakeLists.txt  util.cpp  util.h
lib/: CMakeCache.txt
lib/chilkat/: C_CkAsn.h  C_CkAsnW.h  C_CkAtom.h  C_CkAtomW.h  C_CkAuthAws.h  C_CkAuthAwsW.h  C_CkAuthAzureAD.h  C_CkAuthAzureADW.h  C_CkAuthAzureSAS.h  C_CkAuthAzureSASW.h  C_CkAuthAzureStorage.h  C_CkAuthAzureStorageW.h  C_CkAuthGoogle.h  C_CkAuthGoogleW.h  C_CkAuthUtil.h  C_CkAuthUtilW.h  C_CkBinData.h  C_CkBinDataW.h  C_CkBounce.h  C_CkBounceW.h  C_CkByteData.h  C_CkBz2.h  C_CkBz2W.h  C_CkCache.h  C_CkCacheW.h  C_CkCert.h  C_CkCertChain.h  C_CkCertChainW.h  C_CkCertStore.h  C_CkCertStoreW.h  C_CkCertW.h  C_CkCgi.h  C_CkCgiW.h  C_CkCharset.h  C_CkCharsetW.h  C_CkCompression.h  C_CkCompressionW.h  C_CkCreateCS.h  C_CkCreateCSW.h  C_CkCrypt2.h  (+356 more)
lib/mosq/: libmosquitto.so.1
lib/mosq/cpp/: libmosquittopp.so.1
test/: Makefile  test_camera.cpp  test_curl.cpp  testcurl
